Closed Bug 1552667 Opened 5 years ago Closed 5 years ago

Debug crash when viewing certain message with unknown attachment size in folder not synced for offline use

Categories

(MailNews Core :: Networking: IMAP, defect)

defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED
Thunderbird 68.0

People

(Reporter: jorgk-bmo, Assigned: jorgk-bmo)

Details

Attachments

(2 files, 2 obsolete files)

Test data, put this into an IMAP folder not synced for offline use, like the SPAM folder.

Attached patch 1552667-mContentLength.patch (obsolete) — Splinter Review

This fixes the debug crash via MOZ_ASSERT() for me.

Attachment #9065889 - Flags: review?(acelists)
Attached patch 1552667-mContentLength.patch (obsolete) — Splinter Review

Tweaked comment.

Attachment #9065889 - Attachment is obsolete: true
Attachment #9065889 - Flags: review?(acelists)
Attachment #9065891 - Flags: review?(acelists)

OK, we can also use the M-C constant.

Attachment #9065891 - Attachment is obsolete: true
Attachment #9065891 - Flags: review?(acelists)
Attachment #9065892 - Flags: review?(acelists)
Comment on attachment 9065892 [details] [diff] [review]
1552667-mContentLength.patch

Review of attachment 9065892 [details] [diff] [review]:
-----------------------------------------------------------------

Thanks.
Attachment #9065892 - Flags: review?(acelists) → review+

Pushed by mozilla@jorgk.com:
https://hg.mozilla.org/comm-central/rev/865b4199ce94
initialise mContentLength in nsImapMockChannel CTOR to avoid MOZ_ASSERT() later. r=aceman

Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 68.0
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: