Bug 1552667 - initialise mContentLength in nsImapMockChannel CTOR to avoid MOZ_ASSERT() later. r=aceman